# snowvault

./: .gitignore  Cargo.toml  README.md  demo.tape
.cargo-old/: config.toml
crates/snowvault/: Cargo.toml
crates/snowvault-cli/: Cargo.toml
crates/snowvault-cli/src/: main.rs
crates/snowvault-cli/src/commands/: add.rs  mod.rs  new.rs  open.rs
crates/snowvault-gui/: Cargo.toml
crates/snowvault-gui/src/: font.rs  main.rs
crates/snowvault-gui/src/modals/: mod.rs  password_prompt.rs
crates/snowvault/src/: error.rs  lib.rs  vault.rs
crates/snowvault/src/commands/: mod.rs  mount.rs  new.rs
crates/snowvault_gui/: Cargo.toml  justfile
crates/snowvault_gui/res/: app.desktop
crates/snowvault_gui/src/: app.rs
snowvault-gui/: bun.lockb  package.json  tailwind.config.ts
snowvault-gui/src/: app.html
snowvault-gui/src-tauri/: Cargo.toml  tauri.conf.json
snowvault-gui/src-tauri/src/: lib.rs  main.rs
snowvault-gui/src/routes/: +page.svelte
src/: main.rs  vault.rs
src/commands/: mod.rs  mount.rs  new.rs
