[package]
name = "snowvault"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
const_format = "0.2.33"
dialoguer = "0.11.0"
hex = "0.4.3"
rand = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
