[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
license = "MIT"
version = "0.1.0"
repository = "https://github.com/SkyfallWasTaken/snowvault"

[profile.dev.package.iced]
opt-level = 3

[profile.dev.package.iced_core]
opt-level = 3

[profile.dev.package.iced_renderer]
opt-level = 3

[profile.dev.package.iced_graphics]
opt-level = 3

[profile.dev.package.iced_tiny_skia]
opt-level = 3

[profile.dev.package.iced_wgpu]
opt-level = 3

[profile.dev.package.iced_winit]
opt-level = 3

[profile.dev.package.iced_runtime]
opt-level = 3

[profile.dev.package.libcosmic]
opt-level = 3
