[package]
name = "snowvault"
version.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
eyre = "0.6.3"
const_format = "0.2.33"
hex = "0.4.3"
rand_chacha = "0.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
